Add License tests and make JUnit work in IntelliJ 2021.1.1